Removing List#getLast() method usage for pre java 21 compatibility